--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Motora
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=Asia/Colombo
+APP_TIMEZONE=UTC
 APP_URL=http://127.0.0.1:8000
 
 APP_LOCALE=en
