--- a/docker-compose/nginx/nginx_template_local.conf
+++ b/docker-compose/nginx/nginx_template_local.conf
@@ -8,8 +8,10 @@ server {
 
     root /var/www/public;
 
-    # add_header X-Frame-Options "SAMEORIGIN";
-    # add_header X-Content-Type-Options "nosniff";
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
+
 
     index index.php;
 
