--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,32 +10,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Set up Docker
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      # Set up Docker
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    # Log in to DockerHub or another registry
-    - name: Log in to DockerHub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ vars.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # Log in to DockerHub or another registry
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # Build and push the Docker image
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v6
-      with:
-        push: true
-        tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+      # Build and push the Docker image
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
 
-    # SSH into the VM and deploy
-    - name: Deploy to VM
-      uses: appleboy/ssh-action@v1.2.0
-      with:
-        host: ${{ secrets.VM_HOST }}
-        username: ${{ secrets.VM_USERNAME }}
-        key: ${{ secrets.VM_SSH_KEY }}
-        script: |
-          docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
-          docker-compose down
-          docker-compose up -d
+      # Copy the docker-compose.yml file to the VM
+      - name: Copy docker-compose.yml to VM
+        uses: appleboy/scp-action@v0.1.0
+        with:
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          source: "docker-compose.yml"
+          target: "/home/${{ secrets.VM_USERNAME }}/motora-app"
+
+      # SSH into the VM and deploy
+      - name: Deploy to VM
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          script: |
+            cd /home/${{ secrets.VM_USERNAME }}/motora-app
+            docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
+            docker-compose down
+            docker-compose up -d
