--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
           script: |
+            cd /home/${{ secrets.VM_USERNAME }}/motora-app
             docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
-            docker compose down
-            docker compose up -d
+            docker compose -f compose.yaml down
+            docker compose -f compose.yaml up -d
