--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,7 @@ jobs:
           key: ${{ secrets.VM_SSH_KEY }}
           script: |
             docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
+            docker compose version
+            docker compose images
             docker compose down
             docker compose up -d
