--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
           script: |
             docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
             docker compose version
+            cd motora-app
             ls -la
             docker compose -f compose.yaml images
             docker compose -f compose.yaml down
