--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,7 @@ jobs:
           script: |
             docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
             docker compose version
-            cd motora-app
-            ls -la
+            ls -la /home/***/motora-app/compose.yaml
             docker compose -f compose.yaml images
             docker compose -f compose.yaml down
             docker compose -f compose.yaml up -d
