--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,9 @@ jobs:
           script: |
             docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
             docker compose version
-            ls -la /home/***/motora-app/compose.yaml
+            ls -la
+            cd motora-app
+            ls -la
             docker compose -f compose.yaml images
             docker compose -f compose.yaml down
             docker compose -f compose.yaml up -d
