--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,6 @@ jobs:
           push: true
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
 
-      - name: Debugging Info
-        run: |
-          echo "Current Directory: $(pwd)"
-          echo "Files:"
-          ls -la
-
       # SSH into the VM and deploy
       - name: Deploy to VM
         uses: appleboy/ssh-action@v1.2.0
@@ -42,11 +36,32 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
           script: |
+            # Step 1: Pull the latest Docker image
             docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
-            docker compose version
-            ls -la
 
-            ls -la /var
-            docker compose -f compose.yaml images
+            # Step 2: Ensure necessary directories exist on the VM
+            mkdir -p ~/motora-app
+
+      - name: Transfer compose.yaml to VM
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          source: ./compose.yaml
+          target: ~/motora-app/
+
+      - name: Run Docker Compose
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          script: |
+            # Step 3: Navigate to the deployment directory
+            cd ~/motora-app
+
+            # Step 4: Run Docker Compose
+            docker compose version
             docker compose -f compose.yaml down
             docker compose -f compose.yaml up -d
