--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,12 @@
 services:
   app:
-    build:
-      args:
-        user: user
-        uid: 1000
-      context: ./
-      dockerfile: Dockerfile
-    image: motora
+    # build:
+    #   args:
+    #     user: user
+    #     uid: 1000
+    #   context: ./
+    #   dockerfile: Dockerfile
+    image: ${{ vars.DOCKER_USERNAME }}/motora:latest
     container_name: motora-app
     restart: unless-stopped
     working_dir: /var/www/
@@ -21,10 +21,10 @@ services:
     container_name: motora-db
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_DATABASE: ${DB_DATABASE: -motora_db}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD: -abc12345678}
+      MYSQL_PASSWORD: ${DB_PASSWORD: -abc12345678}
+      MYSQL_USER: ${DB_USERNAME: -thilina}
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     networks:
