--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,8 +70,8 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
           source: |
-            compose.yaml
-            entrypoint.sh
+            ./compose.yaml
+            ./entrypoint.sh
           target: ~/motora-app/
 
       # Run Docker Compose
