--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,9 +69,7 @@ jobs:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
-          source: |
-            ./compose.yaml
-            ./entrypoint.sh
+          source: "compose.yaml, entrypoint.sh"
           target: ~/motora-app/
 
       # Run Docker Compose
