--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
-          source: "compose.yaml, entrypoint.sh"
+          source: "compose.yaml, entrypoint.sh, .env.docker"
           target: ~/motora-app/
 
       # Run Docker Compose
