--- a/compose.yaml
+++ b/compose.yaml
@@ -15,10 +15,10 @@ services:
     container_name: motora-db
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE:-motora_db}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-abc12345678}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-abc12345678}
-      MYSQL_USER: ${DB_USERNAME:-thilina}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_USER: ${DB_USERNAME}
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     networks:
