--- a/compose.yaml
+++ b/compose.yaml
@@ -5,8 +5,8 @@ services:
     restart: unless-stopped
     working_dir: /var/www/
     env_file: .env.docker
-    volumes:
-      - ./:/var/www
+    # volumes:
+    #   - ./:/var/www
     networks:
       - motora
     command: ["./entrypoint.sh"]
