--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Motora
-APP_ENV=local
-APP_KEY=
+APP_ENV=dev
+APP_KEY=base64:ulq/jyrqzMGLFk7d8y7xYDgk5lJ3juFwfyv9ih2c5UU=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://127.0.0.1:8000
+APP_TIMEZONE=Asia/Colombo
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
