--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    # listen [::]:80;
-    # server_name example.com;
+    listen [::]:80;
+    server_name _;
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
