--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -31,7 +31,7 @@ server {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
 
-        fastcgi_pass app:9000;
+        fastcgi_pass motora-app:9000;
         fastcgi_index index.php;
 
         include fastcgi_params;
