--- a/compose.yaml
+++ b/compose.yaml
@@ -41,9 +41,9 @@ services:
       - ./docker-compose/nginx/default.conf:/etc/nginx/sites-available/motora
     networks:
       - motora
-    command: >
-      sh -c "ln -s /etc/nginx/sites-available/motora /etc/nginx/sites-enabled/ &&
-             nginx -g 'daemon off;'"
+    # command: >
+    #   sh -c "ln -s /etc/nginx/sites-available/motora /etc/nginx/sites-enabled/ &&
+    #          nginx -g 'daemon off;'"
 
     # platform: linux/amd64
 
