--- a/compose.yaml
+++ b/compose.yaml
@@ -42,7 +42,10 @@ services:
     networks:
       - motora
     command: >
-      sh -c "cp ./docker-compose/nginx/default.conf /etc/nginx/conf.d"
+      sh -c "
+        cd /etc/nginx/conf.d
+        touch default.conf
+        cp ./docker-compose/nginx/default.conf /etc/nginx/conf.d/default.conf"
 
     # platform: linux/amd64
 
