--- a/compose.yaml
+++ b/compose.yaml
@@ -38,11 +38,11 @@ services:
       - 8000:80
     volumes:
       - ./:/var/www
-      - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d
     networks:
       - motora
-    # command: >
-    #   sh -c "
+    command: >
+      sh -c "ls -la /etc/nginx/conf.d"
     #     cd /etc/nginx/conf.d
     #     touch default.conf
     #     cp ./docker-compose/nginx/default.conf /etc/nginx/conf.d/default.conf"
