--- a/compose.yaml
+++ b/compose.yaml
@@ -38,12 +38,13 @@ services:
       - 8000:80
     volumes:
       - ./:/var/www
-      - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d
+      - ./docker-compose/nginx:/etc/nginx/conf.d
     networks:
       - motora
     command: >
-      sh -c "ls -la /etc/nginx/conf.d &&
-        cp ./docker-compose/nginx/default.conf /etc/nginx/conf.d/default.conf"
+      sh -c "ls -la /var/www/ &&
+        cp /var/www/docker-compose/nginx/default.conf etc/nginx/conf.d/default.conf &&
+        cat etc/nginx/conf.d/default.conf"
 
     # cd /etc/nginx/conf.d
     # touch default.conf
