--- a/compose.yaml
+++ b/compose.yaml
@@ -38,16 +38,16 @@ services:
       - 8000:80
     volumes:
       - ./:/var/www
-      # - ./docker-compose/nginx:/etc/nginx/conf.d
+      - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - motora
     command: >
       sh -c "
         ls -la /var/www/docker-compose/nginx
         ls -la /etc/nginx/conf.d
-        cp /var/www/docker-compose/nginx/default.conf etc/nginx/conf.d/ &&
         cat etc/nginx/conf.d/default.conf"
 
+    # cp /var/www/docker-compose/nginx/default.conf etc/nginx/conf.d/ &&
     # platform: linux/amd64
 
 networks:
