--- a/compose.yaml
+++ b/compose.yaml
@@ -41,11 +41,11 @@ services:
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - motora
-    command: >
-      sh -c "
-        ls -la /var/www/docker-compose/nginx
-        ls -la /etc/nginx/conf.d
-        cat etc/nginx/conf.d/default.conf"
+    # command: >
+    #   sh -c "
+    #     ls -la /var/www/docker-compose/nginx
+    #     ls -la /etc/nginx/conf.d
+    #     cat etc/nginx/conf.d/default.conf"
 
     # cp /var/www/docker-compose/nginx/default.conf etc/nginx/conf.d/ &&
     # platform: linux/amd64
