--- a/compose.yaml
+++ b/compose.yaml
@@ -9,8 +9,9 @@ services:
     restart: unless-stopped
     working_dir: /var/www/
     env_file: .env.docker
-    # volumes:
-    #   - ./:/var/www
+    volumes:
+      - ./:/var/www
+      - ./public:/var/www/public
     networks:
       - motora
     command: ["./entrypoint.sh"]
@@ -37,17 +38,12 @@ services:
     ports:
       - 8000:80
     volumes:
-      - ./:/var/www
+      - ./public:/var/www/public
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - motora
-    # command: >
-    #   sh -c "
-    #     ls -la /var/www/docker-compose/nginx
-    #     ls -la /etc/nginx/conf.d
-    #     cat etc/nginx/conf.d/default.conf"
-
-    # cp /var/www/docker-compose/nginx/default.conf etc/nginx/conf.d/ &&
+    depends_on:
+      - app
     # platform: linux/amd64
 
 networks:
