--- a/compose.yaml
+++ b/compose.yaml
@@ -10,8 +10,7 @@ services:
     working_dir: /var/www/
     env_file: .env.docker
     volumes:
-      - ./:/var/www
-      - ./public:/var/www/public
+      - app-data:/var/www
     networks:
       - motora
     command: ["./entrypoint.sh"]
@@ -38,7 +37,7 @@ services:
     ports:
       - 8000:80
     volumes:
-      - ./public:/var/www/public
+      - app-data:/var/www
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - motora
@@ -49,3 +48,6 @@ services:
 networks:
   motora:
     driver: bridge
+
+volumes:
+  app-data:
