Dashboard, Login Registration, Add/Edit Organization Details, Add/Delete/Restore Location Details Developments

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=dev
 APP_KEY=base64:seHS71FbCCqs3UgF5gd2ITNe6n0KC3rLTEN3l44+0NA=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Colombo
-APP_URL=http://localhost:8000
+APP_URL=http://192.168.43.98:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,11 +22,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=127.0.0.1
+# DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=motora_db
-DB_USERNAME=thilina
-DB_PASSWORD=abc12345678
+DB_USERNAME=root
+DB_PASSWORD=
+# DB_USERNAME=thilina
+# DB_PASSWORD=abc12345678
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -48,11 +51,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=a31899b9396b83
+MAIL_PASSWORD=2ae0c95958fd8b
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
