--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@flaticon/flaticon-uicons": "^3.3.1",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3"
     }
