--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@flaticon/flaticon-uicons": "^3.3.1",
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "ethers": "^5.8.0"
     }
 }
