--- a/compose.yaml
+++ b/compose.yaml
@@ -1,53 +1,53 @@
-services:
-  app:
-    image: ${DOCKER_USERNAME}/motora:latest
-    # image: thilinathushan/motora:latest
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
-    container_name: motora-app
-    restart: unless-stopped
-    working_dir: /var/www/
-    env_file: .env.docker
-    volumes:
-      - app-data:/var/www
-    networks:
-      - motora
-    command: ["./entrypoint.sh"]
+# services:
+#   app:
+#     image: ${DOCKER_USERNAME}/motora:latest
+#     # image: thilinathushan/motora:latest
+#     # build:
+#     #   context: .
+#     #   dockerfile: Dockerfile
+#     container_name: motora-app
+#     restart: unless-stopped
+#     working_dir: /var/www/
+#     env_file: .env.docker
+#     volumes:
+#       - app-data:/var/www
+#     networks:
+#       - motora
+#     command: ["./entrypoint.sh"]
 
-  db:
-    image: mysql
-    # image: mysql:8.0
-    container_name: motora-db
-    restart: unless-stopped
-    env_file: .env.docker
-    environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-    networks:
-      - motora
-  nginx:
-    image: nginx:1.27.3-alpine
-    container_name: motora-nginx
-    restart: unless-stopped
-    ports:
-      - 80:80
-    volumes:
-      - app-data:/var/www
-      - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - motora
-    depends_on:
-      - app
-    # platform: linux/amd64
+#   db:
+#     image: mysql
+#     # image: mysql:8.0
+#     container_name: motora-db
+#     restart: unless-stopped
+#     env_file: .env.docker
+#     environment:
+#       MYSQL_DATABASE: ${DB_DATABASE}
+#       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+#       MYSQL_PASSWORD: ${DB_PASSWORD}
+#       MYSQL_USER: ${DB_USERNAME}
+#       SERVICE_TAGS: dev
+#       SERVICE_NAME: mysql
+#     networks:
+#       - motora
+#   nginx:
+#     image: nginx:1.27.3-alpine
+#     container_name: motora-nginx
+#     restart: unless-stopped
+#     ports:
+#       - 80:80
+#     volumes:
+#       - app-data:/var/www
+#       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
+#     networks:
+#       - motora
+#     depends_on:
+#       - app
+#     # platform: linux/amd64
 
-networks:
-  motora:
-    driver: bridge
+# networks:
+#   motora:
+#     driver: bridge
 
-volumes:
-  app-data:
+# volumes:
+#   app-data:
