--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
     working_dir: /var/www/
     env_file: .env.docker
     volumes:
-      - app-data:/var/www
+      - .:/var/www
     networks:
       - motora
     command: ["./entrypoint.sh"]
@@ -37,7 +37,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - app-data:/var/www
+      - .:/var/www
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - motora
@@ -48,6 +48,5 @@ services:
 networks:
   motora:
     driver: bridge
-
-volumes:
-  app-data:
+# volumes:
+#   app-data:
