--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name 40.82.178.113;
+    server_name localhost;
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
