--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -27,18 +27,19 @@ server {
 
     error_page 404 /index.php;
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-
+    location ~ ^/index\.php(/|$) {
         fastcgi_pass motora-app:9000;
         fastcgi_index index.php;
-
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_hide_header X-Powered-By;
 
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+
+        fastcgi_hide_header X-Powered-By;
+    }
+
+    location ~ \.php$ {
+        return 404;
     }
 
     location ~ /\.(?!well-known).* {
