--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -36,6 +36,10 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
 
         fastcgi_hide_header X-Powered-By;
+
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        internal;
     }
 
     location ~ \.php$ {
