--- a/compose.yaml
+++ b/compose.yaml
@@ -9,9 +9,11 @@ services:
     restart: unless-stopped
     working_dir: /var/www/
     env_file: .env.docker
+    volumes:
+      - app-code:/var/www
     networks:
       - motora
-    command: ["./entrypoint.sh"]
+    # command: ["./entrypoint.sh"]
 
   db:
     image: mysql
@@ -35,6 +37,7 @@ services:
     ports:
       - 80:80
     volumes:
+      - app-code:/var/www
       - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - motora
@@ -47,4 +50,4 @@ networks:
     driver: bridge
 
 volumes:
-  app-data:
+  app-code:
