--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Motora Deployment
+name: Build and Deploy Laravel App
 
 on:
   push:
@@ -10,95 +10,77 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Set up Docker
+      # =================================================================
+      #  PART 1: CHECKOUT AND BUILD THE DOCKER IMAGE
+      #  (This part was already correct and is essential)
+      # =================================================================
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Log in to DockerHub or another registry
-      - name: Log in to DockerHub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Checkout repository — MUST COME FIRST
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Show repo contents
-        run: |
-          pwd
-          ls -R .
-
-      - name: Debug Dockerfile & Entrypoint
-        run: |
-          echo "====== Dockerfile ======"
-          cat Dockerfile
-          echo "====== entrypoint.sh ======"
-          cat entrypoint.sh
-
-      # Build and push the Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
+          # Make sure your repo name matches. e.g., 'motora'
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
-          no-cache: true
-          pull: true
+          # Use caching for faster builds in the future
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      # SSH into the VM and deploy
-      - name: Deploy to VM
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.VM_HOST }}
-          username: ${{ secrets.VM_USERNAME }}
-          key: ${{ secrets.VM_SSH_KEY }}
-          script: |
-            # Step 1: Pull the latest Docker image
-            docker pull ${{ vars.DOCKER_USERNAME }}/motora:latest
+      # =================================================================
+      #  PART 2: DEPLOY THE IMAGE TO THE AZURE VM
+      #  (This is the new, improved, and consolidated section)
+      # =================================================================
 
-            # Step 2: Ensure necessary directories exist on the VM
-            mkdir -p ~/motora-app
-
-      # Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Generate .env.docker file
-        run: |
-          echo "DOCKER_USERNAME=${{ vars.DOCKER_USERNAME }}" > .env.docker
-          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env.docker
-          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env.docker
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env.docker
-          echo "MYSQL_ROOT_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env.docker
-          cat .env.docker  # Optional: Print the file content for debug purposes
-
-      # Transfer files
-      - name: Transfer compose.yaml and entrypoint.sh to VM
+      - name: Copy compose.yaml to VM
+        # We only copy the compose file. The .env will be created from a secret,
+        # and all other application code is inside the Docker image.
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
-          source: "compose.yaml, entrypoint.sh, .env.docker"
-          target: ~/motora-app/
+          source: "compose.yaml"
+          target: "~/motora-app"
 
-      # Run Docker Compose
-      - name: Run Docker Compose
+      - name: Deploy and Run on VM
+        # This single step securely creates the environment file and restarts the application
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
           script: |
+            # Navigate to the application directory on the VM
             cd ~/motora-app
 
-            # Export the environment variable
-            export DOCKER_USERNAME=${{ vars.DOCKER_USERNAME }}
-            # Optional: Debug to confirm the variable is set
-            echo "DOCKER_USERNAME=$DOCKER_USERNAME"
+            # Create the .env.docker file directly on the VM from the GitHub Secret
+            # This is the most secure and reliable method.
+            echo "${{ secrets.PROD_ENV_FILE }}" > .env.docker
+            echo "✅ .env.docker file created on VM."
 
-            docker compose down
-            docker compose --env-file .env.docker up -d
+            # Docker Compose will now read both compose.yaml and the new .env.docker file.
+            # It uses DOCKER_USERNAME from the .env file to pull the right image.
+
+            # Pull the latest version of the image we just pushed
+            docker compose pull
+
+            # Bring down the old stack and remove any stale volumes to prevent permission issues
+            docker compose down --volumes
+
+            # Start the new stack in detached mode
+            docker compose up -d
+
+            echo "🚀 Deployment to Azure VM successful!"
