--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,8 +61,8 @@ jobs:
 
             # Create the .env file securely from the GitHub Secret.
             # This ONE command creates the complete, correct file every time.
-            echo "${{ secrets.PROD_ENV_FILE }}" > .env.docker
-            echo "✅ .env.docker file created on VM."
+            echo "${{ secrets.PROD_ENV_FILE }}" > .env
+            echo "✅ .env file created on VM."
 
             # Pull the latest version of the image we just pushed to Docker Hub
             docker compose pull
